<resources>
    <string name="app_name">AuctionSystem5</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="ful_name">Full name</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="base_price">Base Price</string>
    <string name="end_time">End Time</string>
</resources>
